syntax = "proto3";

package com.sandeep.grpc;

option java_multiple_files = true;
option java_package = "com.sandeep.grpc.proto";
option java_outer_classname = "GreetingProto";

// The greeting service definition
service GreetingService {
  // Simple greeting RPC
  rpc SayHello (HelloRequest) returns (HelloResponse);
  
  // Server streaming RPC
  rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloResponse);
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
  int64 timestamp = 2;
}